# IberGrid

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile.api  Dockerfile.mlflow  Dockerfile.web  Dockerfile.worker  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
apps/api/src/ibergrid_api/: __init__.py  config.py  db.py  dependencies.py  main.py  models.py  schemas.py
apps/api/src/ibergrid_api/routers/: context.py  forecast.py  performance.py  status.py
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: DayAheadChart.tsx  InfoButton.tsx  MarketChart.tsx  PerformancePanel.tsx  StatusPanel.tsx  WeekOutlook.tsx
apps/web/lib/: api.ts  format.ts  i18n.tsx  theme.ts  types.ts
apps/worker/src/ibergrid_worker/: __init__.py  main.py
deploy/: Caddyfile
docs/: architecture.md  deployment.md
tests/: helpers.py  test_api_contract.py  test_forecast.py  test_pipeline.py  test_redata.py  test_time.py
