[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ibergrid"
version = "0.1.0"
description = "Analyst-grade PVPC forecasting platform for peninsular Spain."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "apscheduler>=3.10.4",
  "fastapi>=0.115.0",
  "holidays>=0.61",
  "httpx>=0.28.0",
  "lightgbm>=4.5.0",
  "mlflow>=2.18.0",
  "polars>=1.17.0",
  "duckdb>=1.1.3",
  "pyarrow>=18.0.0",
  "numpy>=2.1.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "python-dateutil>=2.9.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "orjson>=3.10.12",
  "scikit-learn>=1.6.0",
  "typer>=0.13.1",
  "rich>=13.9.4",
  "uvicorn[standard]>=0.32.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "respx>=0.22.0",
  "ruff>=0.8.0"
]
torch = [
  "torch>=2.5.1",
  "lightning>=2.4.0",
  "pytorch-forecasting>=1.1.1"
]

[project.scripts]
ibergrid-ml = "ibergrid_ml.cli:app"
ibergrid-worker = "ibergrid_worker.main:app"

[tool.hatch.build.targets.wheel]
packages = [
  "apps/api/src/ibergrid_api",
  "apps/worker/src/ibergrid_worker",
  "packages/ml/src/ibergrid_ml"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
